# class_schudle

./: README.md  augment.md
class_schudle_backend/: .env  Cargo.toml
class_schudle_backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
class_schudle_backend/migrations/2025-06-16-000001_create_courses/: down.sql  up.sql
class_schudle_backend/src/: database.rs  db_storage.rs  handlers.rs  main.rs  models.rs  schema.rs  storage.rs
class_schudle_frontend/: .env  package.json  vite.config.ts  widget.html
class_schudle_frontend/src/: App.vue  main.ts  widget.ts
class_schudle_frontend/src-tauri/: Cargo.toml  tauri.conf.json
class_schudle_frontend/src-tauri/capabilities/: default.json
class_schudle_frontend/src-tauri/src/: lib.rs  main.rs
class_schudle_frontend/src/components/: DesktopScheduleWidget.vue  ScheduleDisplay.vue  SettingsPanel.vue
class_schudle_frontend/src/constants/: schedule.ts
class_schudle_frontend/src/services/: apiService.ts
class_schudle_frontend/src/stores/: scheduleStore.ts  themeStore.ts
class_schudle_frontend/src/styles/: theme.css
class_schudle_frontend/src/types/: course.ts
class_schudle_frontend/src/utils/: courseUtils.ts
